public enum SlotType{
    SMALL,
    MEDIUM,
    LARGE
} 