public interface Payment {
    public String charge(String studentId, double amount);
}
